# CPP-SoftwareEngineering

./: CMakeLists.txt
02-02/: main.cpp
02-03/: main.cpp  main.out
02-06/: main.cpp  main.out
02-07/: main.cpp  main.out
02-08/: main.cpp  main.out
02-09/: main.cpp  test.cpp
02-10/: main.cpp  main.out  test.cpp  test.out
03-01/: main.cpp  main.out  test.cpp
03-02/: main.cpp  test.cpp
03-03/: main.cpp  test.cpp
03-04/: main.cpp  test.cpp
03-05/: main.cpp  test.cpp
03-06/: main.cpp  test.cpp
03-07/: main.cpp  test.cpp
03-09/: main.cpp  test.cpp
03-10/: main.cpp  test.cpp
04-01/: main.cpp  test.cpp
04-02/: main.cpp  test.cpp
04-03/: main.cpp  test.cpp
04-04/: main.cpp  test.cpp
04-05/: main.cpp  test.cpp
04-06/: main.cpp  test.cpp
04-07/: main.cpp  test.cpp
04-08/: main.cpp  test.cpp
04-09/: main.cpp  test.cpp
04-10/: main.cpp  test.cpp
05-01/: main.cpp  test.cpp
05-02/: main.cpp  test.cpp
05-03/: main.cpp  test.cpp
05-04/: main.cpp  test.cpp
06-01/: linker_errors.txt  main.cpp  rational.cpp  rational.hpp
06-02/: main.cpp  modules_info.txt  rational.cpp  rational.cppm  rational.ixx  rational_type.cppm
06-03/: report.txt
